// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Close> should close the modal 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    aria-modal="false"
    class="popover--open"
    id="🅰41"
    role="dialog"
    style="position: fixed; visibility: visible; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
  >
    <button
      aria-controls="🅰41"
      aria-expanded="true"
      aria-haspopup="dialog"
      aria-label="Close"
      data-testid="close"
    >
      Close me
    </button>
    Hello world
  </div>
  <button
    aria-controls="🅰41"
    aria-expanded="true"
    aria-haspopup="dialog"
  >
    open me
  </button>
</DocumentFragment>
`;

exports[`<Close> should close the modal: closed 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    aria-modal="false"
    id="🅰41"
    role="dialog"
    style="position: fixed; visibility: hidden; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
  >
    <button
      aria-controls="🅰41"
      aria-expanded="false"
      aria-haspopup="dialog"
      aria-label="Close"
      data-testid="close"
    >
      Close me
    </button>
    Hello world
  </div>
  <button
    aria-controls="🅰41"
    aria-expanded="false"
    aria-haspopup="dialog"
  >
    open me
  </button>
</DocumentFragment>
`;

exports[`<Popover> should have a custom id 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    aria-modal="false"
    id="foobar"
    role="dialog"
    style="position: fixed; visibility: hidden; right: 1024px; top: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="foobar"
    aria-expanded="false"
    aria-haspopup="dialog"
  >
    popover me
  </button>
</DocumentFragment>
`;

exports[`<Popover> should provide context to function child 1`] = `
Object {
  "close": [Function],
  "id": "🅰1",
  "isOpen": false,
  "open": [Function],
  "placement": "bottom",
  "reposition": [Function],
  "setTriggeredBy": [Function],
  "style": Object {
    "bottom": 0,
    "left": 0,
    "right": 0,
    "top": 0,
  },
  "targetRef": Object {
    "current": null,
  },
  "toggle": [Function],
  "triggerRef": Object {
    "current": null,
  },
  "triggeredBy": null,
}
`;

exports[`<Target> open on Trigger focus: closed initially 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    id="🅰5"
    role="tooltip"
    style="position: fixed; visibility: hidden; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="🅰5"
    aria-expanded="false"
    aria-haspopup="dialog"
  >
    popover me
  </button>
</DocumentFragment>
`;

exports[`<Target> open on Trigger focus: open 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    class="popover--open"
    id="🅰5"
    role="tooltip"
    style="position: fixed; visibility: visible; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="🅰5"
    aria-expanded="true"
    aria-haspopup="dialog"
  >
    popover me
  </button>
</DocumentFragment>
`;

exports[`<Target> should act like a controlled component when 'open' prop is specified: closed 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    aria-modal="false"
    id="🅰13"
    role="dialog"
    style="position: fixed; visibility: hidden; font-size: 2rem; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="🅰13"
    aria-expanded="false"
    aria-haspopup="dialog"
  >
    popover me
  </button>
</DocumentFragment>
`;

exports[`<Target> should act like a controlled component when 'open' prop is specified: initially open 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    aria-modal="false"
    class="popover--open"
    id="🅰13"
    role="dialog"
    style="position: fixed; visibility: visible; font-size: 2rem; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="🅰13"
    aria-expanded="true"
    aria-haspopup="dialog"
  >
    popover me
  </button>
</DocumentFragment>
`;

exports[`<Target> should act like a controlled component when 'open' prop is specified: still closed 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    aria-modal="false"
    id="🅰13"
    role="dialog"
    style="position: fixed; visibility: hidden; font-size: 2rem; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="🅰13"
    aria-expanded="false"
    aria-haspopup="dialog"
  >
    popover me
  </button>
</DocumentFragment>
`;

exports[`<Target> should act like a controlled component when 'open' prop is specified: still open 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    aria-modal="false"
    class="popover--open"
    id="🅰13"
    role="dialog"
    style="position: fixed; visibility: visible; font-size: 2rem; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="🅰13"
    aria-expanded="true"
    aria-haspopup="dialog"
  >
    popover me
  </button>
</DocumentFragment>
`;

exports[`<Target> should apply custom classname when opened or closed 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    aria-modal="false"
    class="custom"
    id="🅰9"
    role="dialog"
    style="position: fixed; visibility: hidden; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="🅰9"
    aria-expanded="false"
    aria-haspopup="dialog"
  >
    popover me
  </button>
</DocumentFragment>
`;

exports[`<Target> should apply custom classname when opened or closed: open 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    aria-modal="false"
    class="custom popover--open"
    id="🅰9"
    role="dialog"
    style="position: fixed; visibility: visible; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="🅰9"
    aria-expanded="true"
    aria-haspopup="dialog"
  >
    popover me
  </button>
</DocumentFragment>
`;

exports[`<Target> should apply user defined openClass and closedClass 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    aria-modal="false"
    class="closed"
    id="🅰10"
    role="dialog"
    style="position: fixed; visibility: hidden; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="🅰10"
    aria-expanded="false"
    aria-haspopup="dialog"
  >
    popover me
  </button>
</DocumentFragment>
`;

exports[`<Target> should apply user defined openClass and closedClass: open 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    aria-modal="false"
    class="open"
    id="🅰10"
    role="dialog"
    style="position: fixed; visibility: visible; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="🅰10"
    aria-expanded="true"
    aria-haspopup="dialog"
  >
    popover me
  </button>
</DocumentFragment>
`;

exports[`<Target> should apply user defined openStyle and closedStyle 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    aria-modal="false"
    id="🅰11"
    role="dialog"
    style="position: fixed; visibility: hidden; top: 0px; right: 1024px; bottom: 0px; left: 0px; display: none;"
  >
    Hello world
  </div>
  <button
    aria-controls="🅰11"
    aria-expanded="false"
    aria-haspopup="dialog"
  >
    popover me
  </button>
</DocumentFragment>
`;

exports[`<Target> should apply user defined openStyle and closedStyle: open 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    aria-modal="false"
    class="popover--open"
    id="🅰11"
    role="dialog"
    style="position: fixed; visibility: visible; top: 0px; right: 1024px; bottom: 0px; left: 0px; display: block;"
  >
    Hello world
  </div>
  <button
    aria-controls="🅰11"
    aria-expanded="true"
    aria-haspopup="dialog"
  >
    popover me
  </button>
</DocumentFragment>
`;

exports[`<Target> should assign to custom styles when opened or closed 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    aria-modal="false"
    id="🅰8"
    role="dialog"
    style="position: fixed; visibility: hidden; font-size: 2rem; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="🅰8"
    aria-expanded="false"
    aria-haspopup="dialog"
  >
    popover me
  </button>
</DocumentFragment>
`;

exports[`<Target> should assign to custom styles when opened or closed: open 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    aria-modal="false"
    class="popover--open"
    id="🅰8"
    role="dialog"
    style="position: fixed; visibility: visible; font-size: 2rem; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="🅰8"
    aria-expanded="true"
    aria-haspopup="dialog"
  >
    popover me
  </button>
</DocumentFragment>
`;

exports[`<Target> should be initially open when defined as such: closed 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    aria-modal="false"
    id="🅰12"
    role="dialog"
    style="position: fixed; visibility: hidden; font-size: 2rem; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="🅰12"
    aria-expanded="false"
    aria-haspopup="dialog"
  >
    popover me
  </button>
</DocumentFragment>
`;

exports[`<Target> should be initially open when defined as such: initially open 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    aria-modal="false"
    class="popover--open"
    id="🅰12"
    role="dialog"
    style="position: fixed; visibility: visible; font-size: 2rem; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="🅰12"
    aria-expanded="true"
    aria-haspopup="dialog"
  >
    popover me
  </button>
</DocumentFragment>
`;

exports[`<Target> should close on escape key: closed 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    aria-modal="false"
    id="🅰6"
    role="dialog"
    style="position: fixed; visibility: hidden; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="🅰6"
    aria-expanded="false"
    aria-haspopup="dialog"
  >
    popover me
  </button>
</DocumentFragment>
`;

exports[`<Target> should close on escape key: closed initially 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    aria-modal="false"
    id="🅰6"
    role="dialog"
    style="position: fixed; visibility: hidden; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="🅰6"
    aria-expanded="false"
    aria-haspopup="dialog"
  >
    popover me
  </button>
</DocumentFragment>
`;

exports[`<Target> should close on escape key: open 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    aria-modal="false"
    class="popover--open"
    id="🅰6"
    role="dialog"
    style="position: fixed; visibility: visible; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="🅰6"
    aria-expanded="true"
    aria-haspopup="dialog"
  >
    popover me
  </button>
</DocumentFragment>
`;

exports[`<Target> should have a tooltip role w/ focus trigger 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    id="🅰4"
    role="tooltip"
    style="position: fixed; visibility: hidden; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="🅰4"
    aria-expanded="false"
    aria-haspopup="dialog"
  >
    popover me
  </button>
</DocumentFragment>
`;

exports[`<Target> should have a tooltip role w/ hover trigger 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    id="🅰3"
    role="tooltip"
    style="position: fixed; visibility: hidden; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="🅰3"
    aria-expanded="false"
    aria-haspopup="dialog"
  >
    popover me
  </button>
</DocumentFragment>
`;

exports[`<Target> should open and close on Trigger click: closed 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    aria-modal="false"
    id="🅰2"
    role="dialog"
    style="position: fixed; visibility: hidden; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="🅰2"
    aria-expanded="false"
    aria-haspopup="dialog"
  >
    popover me
  </button>
</DocumentFragment>
`;

exports[`<Target> should open and close on Trigger click: closed initially 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    aria-modal="false"
    id="🅰2"
    role="dialog"
    style="position: fixed; visibility: hidden; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="🅰2"
    aria-expanded="false"
    aria-haspopup="dialog"
  >
    popover me
  </button>
</DocumentFragment>
`;

exports[`<Target> should open and close on Trigger click: open 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    aria-modal="false"
    class="popover--open"
    id="🅰2"
    role="dialog"
    style="position: fixed; visibility: visible; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="🅰2"
    aria-expanded="true"
    aria-haspopup="dialog"
  >
    popover me
  </button>
</DocumentFragment>
`;

exports[`<Target> should render into a portal by custom selector 1`] = `
<body>
  <div
    class="portals"
  >
    <div
      aria-hidden="false"
      aria-modal="false"
      class="popover--open"
      id="🅰16"
      role="dialog"
      style="position: fixed; visibility: visible; font-size: 2rem; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
    >
      Hello world
    </div>
  </div>
  <div>
    <button
      aria-controls="🅰16"
      aria-expanded="true"
      aria-haspopup="dialog"
    >
      popover me
    </button>
  </div>
</body>
`;

exports[`<Target> should render into a portal by custom selector object 1`] = `
<body>
  <div
    class="portals"
  >
    <div
      aria-hidden="false"
      aria-modal="false"
      class="popover--open"
      id="🅰15"
      role="dialog"
      style="position: fixed; visibility: visible; font-size: 2rem; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
    >
      Hello world
    </div>
  </div>
  <div>
    <button
      aria-controls="🅰15"
      aria-expanded="true"
      aria-haspopup="dialog"
    >
      popover me
    </button>
  </div>
</body>
`;

exports[`<Target> should render into a portal by default ID 1`] = `
<body>
  <div
    id="portals"
  >
    <div
      aria-hidden="false"
      aria-modal="false"
      class="popover--open"
      id="🅰14"
      role="dialog"
      style="position: fixed; visibility: visible; font-size: 2rem; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
    >
      Hello world
    </div>
  </div>
  <div>
    <button
      aria-controls="🅰14"
      aria-expanded="true"
      aria-haspopup="dialog"
    >
      popover me
    </button>
  </div>
</body>
`;

exports[`<Target> should render to different placements: bottom 1`] = `
<body>
  <div>
    <div
      aria-hidden="false"
      aria-modal="false"
      class="popover--open"
      id="🅰23"
      role="dialog"
      style="position: fixed; visibility: visible; font-size: 2rem; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
    >
      Hello world
    </div>
    <button
      aria-controls="🅰23"
      aria-expanded="true"
      aria-haspopup="dialog"
    >
      popover me
    </button>
  </div>
</body>
`;

exports[`<Target> should render to different placements: bottomLeft 1`] = `
<body>
  <div>
    <div
      aria-hidden="false"
      aria-modal="false"
      class="popover--open"
      id="🅰24"
      role="dialog"
      style="position: fixed; visibility: visible; font-size: 2rem; top: 0px; right: 0px; bottom: 0px; left: 0px;"
    >
      Hello world
    </div>
    <button
      aria-controls="🅰24"
      aria-expanded="true"
      aria-haspopup="dialog"
    >
      popover me
    </button>
  </div>
</body>
`;

exports[`<Target> should render to different placements: bottomRight 1`] = `
<body>
  <div>
    <div
      aria-hidden="false"
      aria-modal="false"
      class="popover--open"
      id="🅰25"
      role="dialog"
      style="position: fixed; visibility: visible; font-size: 2rem; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
    >
      Hello world
    </div>
    <button
      aria-controls="🅰25"
      aria-expanded="true"
      aria-haspopup="dialog"
    >
      popover me
    </button>
  </div>
</body>
`;

exports[`<Target> should render to different placements: center 1`] = `
<body>
  <div>
    <div
      aria-hidden="false"
      aria-modal="false"
      class="popover--open"
      id="🅰37"
      role="dialog"
      style="position: fixed; visibility: visible; font-size: 2rem; top: 0px; right: 1024px; bottom: 768px; left: 0px;"
    >
      Hello world
    </div>
    <button
      aria-controls="🅰37"
      aria-expanded="true"
      aria-haspopup="dialog"
    >
      popover me
    </button>
  </div>
</body>
`;

exports[`<Target> should render to different placements: innerBottom 1`] = `
<body>
  <div>
    <div
      aria-hidden="false"
      aria-modal="false"
      class="popover--open"
      id="🅰33"
      role="dialog"
      style="position: fixed; visibility: visible; font-size: 2rem; top: 0px; right: 1024px; bottom: 768px; left: 0px;"
    >
      Hello world
    </div>
    <button
      aria-controls="🅰33"
      aria-expanded="true"
      aria-haspopup="dialog"
    >
      popover me
    </button>
  </div>
</body>
`;

exports[`<Target> should render to different placements: innerBottomLeft 1`] = `
<body>
  <div>
    <div
      aria-hidden="false"
      aria-modal="false"
      class="popover--open"
      id="🅰34"
      role="dialog"
      style="position: fixed; visibility: visible; font-size: 2rem; top: 0px; right: 0px; bottom: 768px; left: 0px;"
    >
      Hello world
    </div>
    <button
      aria-controls="🅰34"
      aria-expanded="true"
      aria-haspopup="dialog"
    >
      popover me
    </button>
  </div>
</body>
`;

exports[`<Target> should render to different placements: innerBottomRight 1`] = `
<body>
  <div>
    <div
      aria-hidden="false"
      aria-modal="false"
      class="popover--open"
      id="🅰35"
      role="dialog"
      style="position: fixed; visibility: visible; font-size: 2rem; top: 0px; right: 1024px; bottom: 768px; left: 0px;"
    >
      Hello world
    </div>
    <button
      aria-controls="🅰35"
      aria-expanded="true"
      aria-haspopup="dialog"
    >
      popover me
    </button>
  </div>
</body>
`;

exports[`<Target> should render to different placements: innerLeft 1`] = `
<body>
  <div>
    <div
      aria-hidden="false"
      aria-modal="false"
      class="popover--open"
      id="🅰36"
      role="dialog"
      style="position: fixed; visibility: visible; font-size: 2rem; top: 0px; right: 0px; bottom: 768px; left: 0px;"
    >
      Hello world
    </div>
    <button
      aria-controls="🅰36"
      aria-expanded="true"
      aria-haspopup="dialog"
    >
      popover me
    </button>
  </div>
</body>
`;

exports[`<Target> should render to different placements: innerRight 1`] = `
<body>
  <div>
    <div
      aria-hidden="false"
      aria-modal="false"
      class="popover--open"
      id="🅰32"
      role="dialog"
      style="position: fixed; visibility: visible; font-size: 2rem; top: 0px; right: 1024px; bottom: 768px; left: 0px;"
    >
      Hello world
    </div>
    <button
      aria-controls="🅰32"
      aria-expanded="true"
      aria-haspopup="dialog"
    >
      popover me
    </button>
  </div>
</body>
`;

exports[`<Target> should render to different placements: innerTop 1`] = `
<body>
  <div>
    <div
      aria-hidden="false"
      aria-modal="false"
      class="popover--open"
      id="🅰29"
      role="dialog"
      style="position: fixed; visibility: visible; font-size: 2rem; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
    >
      Hello world
    </div>
    <button
      aria-controls="🅰29"
      aria-expanded="true"
      aria-haspopup="dialog"
    >
      popover me
    </button>
  </div>
</body>
`;

exports[`<Target> should render to different placements: innerTopLeft 1`] = `
<body>
  <div>
    <div
      aria-hidden="false"
      aria-modal="false"
      class="popover--open"
      id="🅰30"
      role="dialog"
      style="position: fixed; visibility: visible; font-size: 2rem; top: 0px; right: 0px; bottom: 0px; left: 0px;"
    >
      Hello world
    </div>
    <button
      aria-controls="🅰30"
      aria-expanded="true"
      aria-haspopup="dialog"
    >
      popover me
    </button>
  </div>
</body>
`;

exports[`<Target> should render to different placements: innerTopRight 1`] = `
<body>
  <div>
    <div
      aria-hidden="false"
      aria-modal="false"
      class="popover--open"
      id="🅰31"
      role="dialog"
      style="position: fixed; visibility: visible; font-size: 2rem; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
    >
      Hello world
    </div>
    <button
      aria-controls="🅰31"
      aria-expanded="true"
      aria-haspopup="dialog"
    >
      popover me
    </button>
  </div>
</body>
`;

exports[`<Target> should render to different placements: left 1`] = `
<body>
  <div>
    <div
      aria-hidden="false"
      aria-modal="false"
      class="popover--open"
      id="🅰26"
      role="dialog"
      style="position: fixed; visibility: visible; font-size: 2rem; top: 0px; right: 1024px; bottom: 768px; left: 0px;"
    >
      Hello world
    </div>
    <button
      aria-controls="🅰26"
      aria-expanded="true"
      aria-haspopup="dialog"
    >
      popover me
    </button>
  </div>
</body>
`;

exports[`<Target> should render to different placements: leftBottom 1`] = `
<body>
  <div>
    <div
      aria-hidden="false"
      aria-modal="false"
      class="popover--open"
      id="🅰28"
      role="dialog"
      style="position: fixed; visibility: visible; font-size: 2rem; top: 0px; right: 1024px; bottom: 768px; left: 0px;"
    >
      Hello world
    </div>
    <button
      aria-controls="🅰28"
      aria-expanded="true"
      aria-haspopup="dialog"
    >
      popover me
    </button>
  </div>
</body>
`;

exports[`<Target> should render to different placements: leftTop 1`] = `
<body>
  <div>
    <div
      aria-hidden="false"
      aria-modal="false"
      class="popover--open"
      id="🅰27"
      role="dialog"
      style="position: fixed; visibility: visible; font-size: 2rem; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
    >
      Hello world
    </div>
    <button
      aria-controls="🅰27"
      aria-expanded="true"
      aria-haspopup="dialog"
    >
      popover me
    </button>
  </div>
</body>
`;

exports[`<Target> should render to different placements: right 1`] = `
<body>
  <div>
    <div
      aria-hidden="false"
      aria-modal="false"
      class="popover--open"
      id="🅰20"
      role="dialog"
      style="position: fixed; visibility: visible; font-size: 2rem; top: 0px; right: 0px; bottom: 768px; left: 0px;"
    >
      Hello world
    </div>
    <button
      aria-controls="🅰20"
      aria-expanded="true"
      aria-haspopup="dialog"
    >
      popover me
    </button>
  </div>
</body>
`;

exports[`<Target> should render to different placements: rightBottom 1`] = `
<body>
  <div>
    <div
      aria-hidden="false"
      aria-modal="false"
      class="popover--open"
      id="🅰22"
      role="dialog"
      style="position: fixed; visibility: visible; font-size: 2rem; top: 0px; right: 0px; bottom: 768px; left: 0px;"
    >
      Hello world
    </div>
    <button
      aria-controls="🅰22"
      aria-expanded="true"
      aria-haspopup="dialog"
    >
      popover me
    </button>
  </div>
</body>
`;

exports[`<Target> should render to different placements: rightTop 1`] = `
<body>
  <div>
    <div
      aria-hidden="false"
      aria-modal="false"
      class="popover--open"
      id="🅰21"
      role="dialog"
      style="position: fixed; visibility: visible; font-size: 2rem; top: 0px; right: 0px; bottom: 0px; left: 0px;"
    >
      Hello world
    </div>
    <button
      aria-controls="🅰21"
      aria-expanded="true"
      aria-haspopup="dialog"
    >
      popover me
    </button>
  </div>
</body>
`;

exports[`<Target> should render to different placements: top 1`] = `
<body>
  <div>
    <div
      aria-hidden="false"
      aria-modal="false"
      class="popover--open"
      id="🅰17"
      role="dialog"
      style="position: fixed; visibility: visible; font-size: 2rem; top: 0px; right: 1024px; bottom: 768px; left: 0px;"
    >
      Hello world
    </div>
    <button
      aria-controls="🅰17"
      aria-expanded="true"
      aria-haspopup="dialog"
    >
      popover me
    </button>
  </div>
</body>
`;

exports[`<Target> should render to different placements: topLeft 1`] = `
<body>
  <div>
    <div
      aria-hidden="false"
      aria-modal="false"
      class="popover--open"
      id="🅰18"
      role="dialog"
      style="position: fixed; visibility: visible; font-size: 2rem; top: 0px; right: 0px; bottom: 768px; left: 0px;"
    >
      Hello world
    </div>
    <button
      aria-controls="🅰18"
      aria-expanded="true"
      aria-haspopup="dialog"
    >
      popover me
    </button>
  </div>
</body>
`;

exports[`<Target> should render to different placements: topRight 1`] = `
<body>
  <div>
    <div
      aria-hidden="false"
      aria-modal="false"
      class="popover--open"
      id="🅰19"
      role="dialog"
      style="position: fixed; visibility: visible; font-size: 2rem; top: 0px; right: 1024px; bottom: 768px; left: 0px;"
    >
      Hello world
    </div>
    <button
      aria-controls="🅰19"
      aria-expanded="true"
      aria-haspopup="dialog"
    >
      popover me
    </button>
  </div>
</body>
`;

exports[`<Target> shouldn't close on escape key if prop is false: closed initially 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    aria-modal="false"
    id="🅰7"
    role="dialog"
    style="position: fixed; visibility: hidden; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="🅰7"
    aria-expanded="false"
    aria-haspopup="dialog"
  >
    popover me
  </button>
</DocumentFragment>
`;

exports[`<Target> shouldn't close on escape key if prop is false: open 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    aria-modal="false"
    class="popover--open"
    id="🅰7"
    role="dialog"
    style="position: fixed; visibility: visible; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="🅰7"
    aria-expanded="true"
    aria-haspopup="dialog"
  >
    popover me
  </button>
</DocumentFragment>
`;

exports[`<Target> shouldn't close on escape key if prop is false: still open 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    aria-modal="false"
    class="popover--open"
    id="🅰7"
    role="dialog"
    style="position: fixed; visibility: visible; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="🅰7"
    aria-expanded="true"
    aria-haspopup="dialog"
  >
    popover me
  </button>
</DocumentFragment>
`;

exports[`<Trigger> should have openClass and closedClass 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    aria-modal="false"
    id="🅰39"
    role="dialog"
    style="position: fixed; visibility: hidden; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="🅰39"
    aria-expanded="false"
    aria-haspopup="dialog"
    class="closed"
  >
    popover me
  </button>
</DocumentFragment>
`;

exports[`<Trigger> should have openClass and closedClass: open 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    aria-modal="false"
    class="popover--open"
    id="🅰39"
    role="dialog"
    style="position: fixed; visibility: visible; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="🅰39"
    aria-expanded="true"
    aria-haspopup="dialog"
    class="open"
  >
    popover me
  </button>
</DocumentFragment>
`;

exports[`<Trigger> should have openStyle and closedStyle 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    aria-modal="false"
    id="🅰40"
    role="dialog"
    style="position: fixed; visibility: hidden; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="🅰40"
    aria-expanded="false"
    aria-haspopup="dialog"
    style="display: none;"
  >
    popover me
  </button>
</DocumentFragment>
`;

exports[`<Trigger> should have openStyle and closedStyle: open 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    aria-modal="false"
    class="popover--open"
    id="🅰40"
    role="dialog"
    style="position: fixed; visibility: visible; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="🅰40"
    aria-expanded="true"
    aria-haspopup="dialog"
    style="display: block;"
  >
    popover me
  </button>
</DocumentFragment>
`;

exports[`usePopover() should return context 1`] = `
Object {
  "close": [Function],
  "id": "🅰44",
  "isOpen": false,
  "open": [Function],
  "placement": "bottom",
  "reposition": [Function],
  "setTriggeredBy": [Function],
  "style": Object {
    "bottom": 0,
    "left": 0,
    "right": 0,
    "top": 0,
  },
  "targetRef": Object {
    "current": null,
  },
  "toggle": [Function],
  "triggerRef": Object {
    "current": null,
  },
  "triggeredBy": null,
}
`;
